...
            ),
          ),
          Container(width: 140, alignment: Alignment.center, child: Text('Página ${state.currentPage}')),
          Expanded(
            child: ElevatedButton(
              onPressed: state.hasNextPage ? () => ref.read(juiciosProvider.notifier).nextPage() : null,
              child: const Text('Siguiente'),
            ),
          ),
        ],
      ),
    );
  }
...
